# ff1-online-server

./: CMakeLists.txt  bot-1.txt  bot-2.txt  bot-3.txt  bot-moves.txt  deploy.sh
bot/: CMakeLists.txt
bot/src/: main.cpp
include/: Bot.h  Character.h  CharacterManager.h  CharacterRegistry.h  Comm.h  Message.h  Serialization.h
src/: main.cpp
systemd/: ff1-online-bot@.service  ff1-online-server.service
